# wasmtime_provider_benchmark

./: Cargo.toml  README.md  policy.wasm
benches/: benchmarks.rs
